Fix: fixed background image not showing issue

--- a/AGRIPRO_SITE/style.css
+++ b/AGRIPRO_SITE/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("/images/background/login_background.jpeg");
+    background-image: url("images/background/login_background.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
